fix: fixed languages aligning problem

--- a/src/Styles/Main.scss
+++ b/src/Styles/Main.scss
@@ -120,8 +120,8 @@ footer {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-  margin-left: 34vh;
-  max-height: 20vh; max-width: 160vh;
+  margin-left: 18vh;
+  max-height: 16vh; max-width: 200vh;
   .brackets {
     margin: 33px 0 0 40vh;
     font-size: 30px;
